add create  page recourses

--- a/resource/templates/register.html
+++ b/resource/templates/register.html
@@ -33,12 +33,19 @@
     <form id="register_form" class="form_class">
         <div class="form_div">
             <label>Register:</label>
-            <input class="field_class" name="register_txt" type="text" placeholder="email" >
+
+            <input class="field_class" name="register_txt" 
+            type="text" placeholder="email" >
+            
             <label>Password:</label>
-            <input id="pass" class="field_class" name="password_txt" type="password" placeholder="password">
+            <input id="pass" class="field_class" name="password_txt" 
+            type="password" placeholder="password">
+
             <label>Pepeat Password:</label>
-            <input id="pass" class="field_class" name="password_txt" type="rePassword" placeholder="password">
-            <button class="submit_class" type="submit">register</button>
+            <input id="pass" class="field_class" name="password_txt" 
+            type="rePassword" placeholder="password">
+            
+            <button class="submit_class" type="submit">Register</button>
         </div>
         <div class="info_div">
             <p>Already registered? <a href="/login">Login</a></p>
