add edit page recourses

--- a/resource/templates/edit.html
+++ b/resource/templates/edit.html
@@ -30,10 +30,10 @@
         </nav>
     </header>
 
-    <main class="create">
+    <main class="form">
 
         <form  class="form_class">
-            <h1>Create Post</h1>
+            <h1>Edit Post</h1>
 
             <div class="form_div">
                 <label>Fish Name:</label>
@@ -47,7 +47,7 @@
 
                 <label>Description:</label>
                 <textarea  class="field_class" name="description_txt" placeholder="description"></textarea>
-                <button class="submit_class" type="submit">Create</button>
+                <button class="submit_class" type="submit">Edit</button>
 
             </div>
 
