--- a/resource/templates/edit.css
+++ b/resource/templates/edit.css
@@ -1,5 +1,4 @@
 
-
 * {
     padding: 0px;
     margin: 0px;
@@ -59,7 +58,12 @@ nav a {
 header a:hover {
     color: rgb(202, 203, 204);
 }
-
+h1 {
+    letter-spacing: 1.5vw;
+    font-family: 'system-ui';
+    text-transform: uppercase;
+    text-align: center;
+}
 main {
     display: flex;
     align-items: center;
@@ -68,7 +72,6 @@ main {
     width: 100%;
    
 }
-
 .form_class {
     width: 500px;
     padding: 40px;
