--- a/resource/templates/register.html
+++ b/resource/templates/register.html
@@ -29,7 +29,7 @@
     </nav>
 </header>
 
-<main class="register">
+<main class="form">
     <form id="register_form" class="form_class">
         <div class="form_div">
             <label>Register:</label>
@@ -44,7 +44,7 @@
             <label>Pepeat Password:</label>
             <input id="pass" class="field_class" name="password_txt" 
             type="rePassword" placeholder="password">
-            
+
             <button class="submit_class" type="submit">Register</button>
         </div>
         <div class="info_div">
