add catalog page recourses

--- a/resource/templates/login.html
+++ b/resource/templates/login.html
@@ -31,6 +31,9 @@
 </header>
 
 <main class="form">
+    <div class="errorContainer">
+        <p>Error!</p>
+    </div>
     <form  class="form_class" action="login/login-access.php" method="post">
         <div class="form_div">
             <label>Login:</label>
