--- a/resource/templates/index.html
+++ b/resource/templates/index.html
@@ -32,6 +32,9 @@
     </header>
 
     <main>
+        <div class="errorContainer">
+            <p>Error!</p>
+        </div>
         <section class="main">
             <h1 id="home">Welcom to Fish World</h1>
         </section>
