--- a/resource/templates/details.html
+++ b/resource/templates/details.html
@@ -43,22 +43,17 @@
                    <img src="https://blog.ferplast.com/wp-content/uploads/2020/05/p-pesce-scalare-caratteristiche-ferplast.png">
                     <p>Name: The Discus fish</p>
                     <p>Type: Cichlidae </p>
-                    <a class="details-btn" href="/details"><i class="fa-regular fa-circle-info"></i> Details</a>
+                    <p>Description: Its bright colours and its graceful movements. 
+                        It is certainly one of the most popular species. 
+                        It is very sensitive to environmental stress and does not like to live in an environment with bright lighting.</p>
+                    <div class="owner-btn">
+                    <button class="edit-btn" href="/edit"><i class="fa-solid fa-pen"></i> Edit</button>
+                    <button class="delete-btn" href="/delete"> <i class="fa-solid fa-trash-can"></i> Delete</button>
+                    <button class="like-btn" href="/Like">
+                    <i class="fa-sharp fa-solid fa-thumbs-up"></i> Like</button>
+                </div>
                 </article>
 
-                <article class="detail-item">
-                    <img src="https://blog.ferplast.com/wp-content/uploads/2020/05/consigli-come-allevare-pesci-tropicali-betta-splendens.jpg">
-                    <p>Name: The Siamese fighting fish</p>
-                    <p>Type: Betta</p>
-                        <a class="details-btn" href="/details"><i class="fa-regular fa-circle-info"></i> Details</a>
-                </article>
-
-                <article class="detail-item">
-                    <img src="https://blog.ferplast.com/wp-content/uploads/2020/05/ferplast-pesci-pesce-combattente-1-900x600.jpg">
-                    <p>Name: King Red Betta  </p>
-                    <p>Type: Betta splendens</p>
-                    <a class="details-btn" href="/details"><i class="fa-regular fa-circle-info"></i> Details</a>
-                    </article>
                 </div>
           
         </section>
