--- a/resource/templates/index.html
+++ b/resource/templates/index.html
@@ -41,23 +41,23 @@
         <section class="item-view">
             <aside class="item-info">
                 <article class="aside-item">
-                    <img src="https://e7.pngegg.com/pngimages/90/95/png-clipart-siamese-fighting-fish-graphy-aquarium-beautiful-tropical-fish-animals-photography.png">
-                    <p>Name:</p>
-                    <p>Type: </p>
+                    <img src="https://blog.ferplast.com/wp-content/uploads/2020/05/p-pesce-scalare-caratteristiche-ferplast.png">
+                    <p>Name: The Discus fish</p>
+                    <p>Type: Cichlidae </p>
                     <a class="details-btn" href="/details">Details</a>
                 </article>
 
                 <article class="aside-item">
-                    <img src="https://e7.pngegg.com/pngimages/386/854/png-clipart-ornamental-fish-aquarium-fish-animals-seafood-thumbnail.png">
-                    <p>Name:</p>
-                    <p>Type: </p>
+                    <img src="https://blog.ferplast.com/wp-content/uploads/2020/05/consigli-come-allevare-pesci-tropicali-betta-splendens.jpg">
+                    <p>Name: The Siamese fighting fish</p>
+                    <p>Type: Betta </p>
                     <a class="details-btn" href="/details">Details</a>
                 </article>
 
                 <article class="aside-item">
-                    <img src="https://e7.pngegg.com/pngimages/1002/283/png-clipart-red-siamese-fighting-fish-siamese-fighting-fish-veiltail-cat-angelfish-betta-animals-orange-thumbnail.png">
-                    <p>Name: </p>
-                    <p>Type: </p>
+                    <img src="https://blog.ferplast.com/wp-content/uploads/2020/05/ferplast-pesci-pesce-combattente-1-900x600.jpg">
+                    <p>Name:  King Red Betta</p>
+                    <p>Type: Betta splendens </p>
                     <a class="details-btn" href="/details">Details</a>
                     </article>
             </aside>
