add details page recourses

--- a/resource/templates/details.html
+++ b/resource/templates/details.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fish World</title>
-    <link rel="stylesheet" href="catalog.css">
+    <link rel="stylesheet" href="details.css">
     <script src="https://kit.fontawesome.com/7bc65949c4.js" crossorigin="anonymous"></script>
 
 </head>
