--- a/resource/templates/details.css
+++ b/resource/templates/details.css
@@ -75,7 +75,9 @@ nav a {
 }
 
 .insidei-wrap {
-    margin-left: 15%;
+    width: auto;
+    height: auto;
+    margin-left: 30%;
     margin-right: 15%;
     padding-top: 10%;
     padding-bottom: 5%;
@@ -83,7 +85,7 @@ nav a {
 
 .detail-item{
     display: inline-block;
-    width: 300px;
+    width: 600px;
     height: auto;
     margin-bottom: 10px;
     background-color: white;
@@ -96,10 +98,11 @@ nav a {
 .detail-item img {
     border: 2px solid rgba(169, 152, 198, 0.781);
     border-radius: 50%;
-    width: 190px;
-    height: 170px;
+    width: 250px;
+    height: 250px;
     margin: 16%;
-    margin-top: 5%;
+    margin-top: 7%;
+    margin-left:25%
     
 }
 .detail-item p {
