add create template

--- a/fish-world/src/app/fish/add-fish/add-fish.component.html
+++ b/fish-world/src/app/fish/add-fish/add-fish.component.html
@@ -1,1 +1,24 @@
-<p>add-fish works!</p>
+<main class="create">
+
+    <form  class="form_class">
+        <h1>Create Post</h1>
+
+        <div class="form_div">
+            <label>Fish Name:</label>
+            <input class="field_class" name="name_txt" type="text" placeholder="name">
+
+            <label>Image</label>
+            <input id="img-url" class="field_class" type="text" name="image"  placeholder="Image" />
+            
+            <label>Fish Type:</label>
+            <input  class="field_class" name="type_txt" placeholder="type">
+
+            <label>Description:</label>
+            <textarea  class="field_class" name="description_txt" placeholder="description"></textarea>
+            <button class="submit_class" type="submit">Create</button>
+
+        </div>
+
+    </form>
+</main>
+
