add details template

--- a/fish-world/src/app/fish/details/details.component.html
+++ b/fish-world/src/app/fish/details/details.component.html
@@ -1,1 +1,21 @@
-<p>details works!</p>
+<section class="details-wrapper">
+    <div class="insidei-wrap">
+          <article class="detail-item">
+             <img src="https://blog.ferplast.com/wp-content/uploads/2020/05/p-pesce-scalare-caratteristiche-ferplast.png">
+              <p>Name: The Discus fish</p>
+              <p>Type: Cichlidae </p>
+              <p>Description: Its bright colours and its graceful movements. 
+                  It is certainly one of the most popular species. 
+                  It is very sensitive to environmental stress and does not like to live in an environment with bright lighting.</p>
+              <div class="owner-btn">
+              <button class="edit-btn" routerLink="/edit"><i class="fa-solid fa-pen"></i> Edit</button>
+              <button class="delete-btn" routerLink="/delete"> <i class="fa-solid fa-trash-can"></i> Delete</button>
+              <button class="like-btn" routerLink="/Like">
+              <i class="fa-sharp fa-solid fa-thumbs-up"></i> Like</button>
+          </div>
+          </article>
+
+          </div>
+    
+  </section>
+
