add home template

--- a/fish-world/src/app/fish/home/home.component.html
+++ b/fish-world/src/app/fish/home/home.component.html
@@ -1,1 +1,93 @@
-<p>home works!</p>
+<main>
+    <div class="errorContainer">
+        <p>Error!</p>
+    </div>
+    <section class="main">
+        <h1 id="home">Welcom to Fish World</h1>
+    </section>
+    <section class="item-view">
+        <aside class="item-info">
+            <article class="aside-item">
+                <img src="https://blog.ferplast.com/wp-content/uploads/2020/05/p-pesce-scalare-caratteristiche-ferplast.png">
+                <p>Name: The Discus fish</p>
+                <p>Type: Cichlidae </p>
+                <a class="details-btn" routerLink="/details">Details</a>
+            </article>
+
+            <article class="aside-item">
+                <img src="https://blog.ferplast.com/wp-content/uploads/2020/05/consigli-come-allevare-pesci-tropicali-betta-splendens.jpg">
+                <p>Name: The Siamese fighting fish</p>
+                <p>Type: Betta </p>
+                <a class="details-btn" routerLink="/details">Details</a>
+            </article>
+
+            <article class="aside-item">
+                <img src="https://blog.ferplast.com/wp-content/uploads/2020/05/ferplast-pesci-pesce-combattente-1-900x600.jpg">
+                <p>Name:  King Red Betta</p>
+                <p>Type: Betta splendens </p>
+                <a class="details-btn" routerLink="/details">Details</a>
+                </article>
+        </aside>
+
+        <aside class="home-info">
+            <h2>Are you know that . . .</h2>
+            <h3>1. Fish are social and cooperative</h3>
+            <p>Giant moray eels and Red Sea coral groupers often
+                hunt together. First, the groupers make gestures
+                to ask the eels to join them on a hunt — a kind
+                of fish sign language. Then, once out hunting,
+                they adopt complementary roles: the eels can
+                squeeze into crevices too small for the groupers,
+                while the groupers are faster swimmers in open
+                water. Working together, the pair has a better
+                chance of catching something to eat.</p>
+
+            <h3>2. Fish feel pleasure, not just pain</h3>
+            <p>Fish interact and form relationships with each other and other
+                fish species. For example, bluestreak cleaner wrasses provide a
+                special service to fellow fish. The wrasses swim into the gills
+                and mouths of their “clients” to remove and feed on their
+                parasites.</p>
+
+            <h3>3. Fish have great memories</h3>
+            <p>Contrary to popular belief, fish do have great memories.
+                Some species of fish can recognize and remember humans that give
+                them food rewards. Cleaner fish, as described above, can recognize
+                their clients that they regularly clean, which can be up to 100
+                different fish.</p>
+
+            <h3>4. Fish are smart and can learn</h3>
+            <p>Fish will avoid situations they know to cause them pain, and will seek out experiences with rewards.
+                Fish can also learn how to use tools. Many fish, for example, use rocks to crack open bivalves such
+                as clams, oysters and mussels for food.</p>
+
+            <h3>5. Fish are flexible</h3>
+            <p>Salmon and sea trout live in both saltwater and freshwater. These fish hatch in freshwater, and then
+                swim to the sea where they mature into adults. They undergo significant body changes and have
+                specialized organs to adapt to and excel in both freshwater and saltwater</p>
+
+            <!-- <h3>6. Fish are excellent communicators</h3>
+            <p>Even though fish do not have vocal chords, they still excel at communicating with one another. They
+                accomplish this through various sounds, scents, electrical pulses and motions.</p> -->
+<!-- 
+            <h3>7. Fish can migrate extremely far distances</h3>
+            <p>Adult salmon living in saltwater environments migrate a vast distance to return to freshwater to
+                spawn. Salmon can travel up to 50 km per day on their spawning journeys, which is equivalent to us
+                running more than a marathon every day. In total, their migration can reach upwards of 3,000 km from
+                the ocean upstream through freshwater where they will spawn.</p>
+
+            <h3>8. Fish have exceptional sensory capabilities</h3>
+            <p>Fish can detect movement in the water through a special row of sensory scales along their body called
+                the lateral line. These sensory scales pick up low frequency sound waves that vibrate through the
+                water.</p>
+
+            <h3>9. Fish can change colour</h3>
+            <p>Fish are also known to change colours depending on camouflage needs, environmental conditions and
+                time of the year. Colours range all across the rainbow, from blues and greens to pinks and reds.</p> -->
+
+        </aside>
+
+    </section>
+
+
+</main>
