--- a/fish-world/src/app/user/login/login.component.html
+++ b/fish-world/src/app/user/login/login.component.html
@@ -1,1 +1,17 @@
-<p>login works!</p>
+<main class="form">
+    <div class="errorContainer">
+        <p>Error!</p>
+    </div>
+    <form  class="form_class" action="login/login-access.php" method="post">
+        <div class="form_div">
+            <label>Login:</label>
+            <input class="field_class" name="login_txt" type="text" placeholder="email" autofocus>
+            <label>Password:</label>
+            <input id="password" class="field_class" name="password_txt" type="password" placeholder="password">
+            <button class="submit_class" type="submit" form="login_form" >Login</button>
+        </div>
+        <div class="info_div">
+            <p>Not registered? <a routerLink="/register">Create an account</a></p>
+        </div>
+    </form>
+</main>
