--- a/fish-world/src/styles.css
+++ b/fish-world/src/styles.css
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    padding: 0;
+    margin: 0;
+}
+
+body {
+ 
+    display:grid;
+    overflow:visible;
+    background-image: url("https://static.vecteezy.com/system/resources/previews/000/127/780/original/free-seabed-vector.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 100vh;
+    width: 100%;
+}
