generate Auth component and  add app authentication

--- a/fish-world/src/app/app.component.html
+++ b/fish-world/src/app/app.component.html
@@ -1,7 +1,9 @@
-
+<app-authenticate>
     <app-header></app-header>
     <router-outlet></router-outlet>
     <app-footer></app-footer>
+</app-authenticate>
+   
 
 
 
