--- a/fish-world/src/app/user/register/register.component.css
+++ b/fish-world/src/app/user/register/register.component.css
@@ -55,3 +55,27 @@ main {
     box-shadow: 2px 2px 5px rgb(0,0,0,0.2);
     cursor: pointer;
 }
+.errorContainer {
+    position: fixed;
+    background: none;
+    right: 20px;
+    min-width: 80px;
+    display: block;
+    z-index: 11111;
+    top: 100px;
+    text-align: center;
+    border-radius: 20px;
+    color: rgb(255, 255, 255);
+    height: 30px;
+    width: 280px;
+
+}
+
+.errorContainer>p {
+    background: linear-gradient(45deg, #15639a, #585045);
+    font-size: 20px;
+    padding: 20px;
+    height: 15px;
+    border-radius: 20px;
+
+}
