--- a/fish-world/src/app/core/header/header.component.html
+++ b/fish-world/src/app/core/header/header.component.html
@@ -7,9 +7,10 @@
             <a class="nav-link" routerLink="">Home</a>
             <a class="nav-link" routerLink="/catalog">Catalog</a>
         </div>
-        <div *ngIf="!isLoggedIn" class="user" >
+        <div *ngIf="isLoggedIn" class="user" >
             <a class="nav-link" routerLink="/create">Create Post</a>
-            <a (click)="logout()" routerLink="nav-link" href="/logout">Logout</a>
+            <a class="nav-link" routerLink="/profile">Profile</a>
+            <a class="nav-link" (click)="logout()" routerLink="/logout">Logout</a>
            
         </div>
         <div *ngIf="!isLoggedIn" class="gest" >
