--- a/fish-world/src/app/core/error/error.component.css
+++ b/fish-world/src/app/core/error/error.component.css
@@ -3,22 +3,24 @@
     background: none;
     right: 20px;
     min-width: 80px;
-    display: block;
+    display:flex;
     z-index: 11111;
     top: 100px;
     text-align: center;
     border-radius: 20px;
     color: rgb(255, 255, 255);
-    height: 30px;
-    width: 280px;
+    height: auto;
+    width: auto;
 
 }
 
 .errorContainer>p {
     background: linear-gradient(45deg, #15639a, #585045);
+    height: auto;
+    width: auto;
     font-size: 20px;
-    padding: 20px;
-    height: 15px;
+    padding: 30px;
+    height: 20px;
     border-radius: 20px;
 
 }
