--- a/fish-world/src/app/core/error/error.component.html
+++ b/fish-world/src/app/core/error/error.component.html
@@ -1,3 +1,5 @@
-<div class="errorContainer">
-    <p>{{errorMsg}}</p>
-</div>
+<ng-container  *ngIf="errorMsg">
+    <div class="errorContainer">
+        <p>{{errorMsg}}</p>
+    </div>
+</ng-container>
