--- a/fish-world/src/app/fish/catalog/catalog.component.html
+++ b/fish-world/src/app/fish/catalog/catalog.component.html
@@ -1,27 +1,13 @@
 <main>
        
     <section class="details-wrapper">
-      <div class="insidei-wrap">
+      <div *ngFor="let fish of fishPost" class="insidei-wrap">
             <article class="detail-item">
-               <img src="https://blog.ferplast.com/wp-content/uploads/2020/05/p-pesce-scalare-caratteristiche-ferplast.png">
-                <p>Name: The Discus fish</p>
-                <p>Type: Cichlidae </p>
-                <a class="details-btn" routerLink="/details"><i class="fa-regular fa-circle-info"></i> Details</a>
+               <img src="{{fish.image}}">
+                <p>Name: {{fish.name}}</p>
+                <p>Type: {{fish.type}} </p>
+                <a class="details-btn" [routerLink]="fish.id"><i class="fa-regular fa-circle-info"></i> Details</a>
             </article>
-
-            <article class="detail-item">
-                <img src="https://blog.ferplast.com/wp-content/uploads/2020/05/consigli-come-allevare-pesci-tropicali-betta-splendens.jpg">
-                <p>Name: The Siamese fighting fish</p>
-                <p>Type: Betta</p>
-                    <a class="details-btn" routerLink="/details"><i class="fa-regular fa-circle-info"></i> Details</a>
-            </article>
-
-            <article class="detail-item">
-                <img src="https://blog.ferplast.com/wp-content/uploads/2020/05/ferplast-pesci-pesce-combattente-1-900x600.jpg">
-                <p>Name: King Red Betta  </p>
-                <p>Type: Betta splendens</p>
-                <a class="details-btn" routerLink="/details"><i class="fa-regular fa-circle-info"></i> Details</a>
-                </article>
             </div>
       
     </section>
