--- a/fish-world/src/app/fish/catalog/catalog.component.css
+++ b/fish-world/src/app/fish/catalog/catalog.component.css
@@ -1,31 +1,29 @@
 details-wrapper {
-    display:flex;
-    background-color: rgba(255, 255, 255, 0.333);
-    display:flexbox; 
+    display:inline-block;
     width: auto;
     height: auto;
     border-radius: 30px;
+
     
 }
 
 .insidei-wrap {
-    margin-left: 20%;
-    margin-right: auto;
-    padding-top: 10%;
+    display:inline-block;
+    margin-left: 10px;
+    margin-right: 30px;
+    padding-top: 8%;
     padding-bottom: 5%;
+    padding-left: 10px;
 }
 
 .detail-item{
-    display: inline-block;
+    display: block;
     width: 300px;
     height: 400px;
     margin-bottom: 10px;
     margin-left: 1%;
     background-color: white;
-    border-radius: 30px;
-    vertical-align: middle;
-    
-    
+    border-radius: 30px;   
 }
 
 .detail-item img {
@@ -37,7 +35,16 @@ details-wrapper {
     margin-top: 5%;
     
 }
-
+.no-post {
+    position:static;
+     background-color: #59452e86;
+     color: black;
+     font-size: 50px;
+     padding: 50px;
+     text-align: center;
+     border-radius: 20px;
+     margin-bottom: 15%;
+   }
 
 .detail-item p {
     text-align: justify;
@@ -61,4 +68,16 @@ details-wrapper {
     width: auto;
     margin-left: 30%;
     text-decoration: none;
+}
+
+.main h1 {
+    font-size: 35px;
+    margin-bottom: 80px;
+    margin-top: 50px;
+}
+
+#home {
+    font-style: oblique;
+    color: rgb(5, 16, 78);
+    text-align: center;
 }
