--- a/fish-world/src/app/fish/home/home.component.css
+++ b/fish-world/src/app/fish/home/home.component.css
@@ -1,12 +1,33 @@
 .item-view {
+    height: 80%;
+    width: 100%;
+  margin-bottom: 100px;
+  display: inline-block;
+}
+
+.home-info {
+    display:block;
+    position:static;
     background-color: rgba(255, 255, 255, 0.333);
-    display: inline-flex;
+    height: 500px;
+    width: 1200px;
+    border-radius: 20px;
+  margin-left: 5%;
+    margin-bottom: 5%;
 
-
+   
+}
+.item-info {
+    display: inline-block;
+    margin-left: 30px;
+    height: inherit;
+    width: 400px;
+   
+  
 }
 
 aside .aside-item {
-    display: inline-block;
+ 
     width: 400px;
     height: auto;
     margin-bottom: 30px;
@@ -61,8 +82,8 @@ aside .aside-item p {
 
 .main h1 {
     font-size: 35px;
-    margin-bottom: 5px;
-    margin-top: 5px;
+    margin-bottom: 50px;
+    margin-top: 80px;
 }
 
 h3 {
@@ -71,29 +92,38 @@ h3 {
 
 }
 
-.home-info {
-    display: inline-block;
-    background-color: rgba(255, 255, 255, 0.333);
-    width: 90%;
-    height: auto;
-    padding: 1%;
-    border-radius: 20px;
-    margin-left: 1%;
-    margin-right: 4%;
-    margin-top: 9%;
-    margin-bottom: 11%;
-}
 
-.item-info {
-    margin-left: 3%;
-    margin-right: 2%;
-    margin-top: 10%;
-    margin-bottom: 10%;
+
+.home-info p {
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .home-info h3 {
-    font-family: serif
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-bottom: 10px;
+    text-align:justify;
+    margin-left: 30px;
 }
+
+.home-info h2 {
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-bottom: 30px;
+    margin-top: 50px;
+    margin-left: 30px;
+}
+
+.no-post {
+   position:static;
+    background-color: #59452e86;
+    color: black;
+    font-size: 50px;
+    padding: 50px;
+    text-align: center;
+    border-radius: 20px;
+    margin-bottom: 15%;
+  }
 
 .errorContainer {
     position: fixed;
