--- a/fish-world/src/app/fish/home/home.component.html
+++ b/fish-world/src/app/fish/home/home.component.html
@@ -9,7 +9,7 @@
                 <img src="{{fish.image}}">
                 <p>Name: {{fish.name}}</p>
                 <p>Type: {{fish.type}} </p>
-                <a class="details-btn" routerLink="/details/fish._id">Details</a>
+                <a class="details-btn" routerLink="/details/{{fish._id}}">Details</a>
             </article>
         </aside>
 
@@ -70,7 +70,7 @@
                 time of the year. Colours range all across the rainbow, from blues and greens to pinks and reds.</p> -->
 
         </aside>
-
+        <p *ngIf="fishPost?.length === 0" class="no-post">There are no animals in need!</p>
     </section>
 
 
