--- a/fish-world/src/app/app.component.html
+++ b/fish-world/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-authenticate>
     <app-header></app-header>
+    <app-error></app-error>
     <router-outlet></router-outlet>
     <app-footer></app-footer>
 </app-authenticate>
