add routerlink in error page

--- a/fish-world/src/app/shared/error-page/error-page.component.html
+++ b/fish-world/src/app/shared/error-page/error-page.component.html
@@ -8,7 +8,7 @@
         </h2>
         </div>
         <p>Go to
-            <a class="nav-link" href="">Home ...</a>
+            <a class="nav-link" routerLink="/home">Home ...</a>
         </p>
        
     </div>
